--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,44 @@
+@import url("https://fonts.googleapis.com/css?family=Oswald");
 body {
-  background-color: red;
+  background-color: #474d5f;
+}
+
+.header {
+  width: 100%;
+  height: 65px;
+  background-color: #b3b3bb;
+}
+
+.header h1 {
+  margin: 0;
+  padding-top: 12px;
+  font-size: 26px;
 }
 
 .App {
   text-align: center;
 }
 
-.bitcoin, .etherum, .bitcoinCash, .litecoin {
+.App h1 {
+  color: #636363;
+  font-family: 'Oswald', sans-serif;
+}
+
+.App h2 {
+  font-size: 22px;
+  color: #b39999;
+  font-family: 'Oswald', sans-serif;
+}
+
+.bitcoin,
+.etherum,
+.bitcoinCash,
+.litecoin {
   width: 100%;
   height: 135px;
+}
+
+.bitcoin {
+  padding-top: 50px;
 }
 /*# sourceMappingURL=app.css.map */
