--- a/src/app.scss
+++ b/src/app.scss
@@ -1,18 +1,46 @@
+@import url("https://fonts.googleapis.com/css?family=Oswald");
 body {
-    background-color: red;
+    // background-color: #a3b7f3;
+    background-color: #474d5f;
+}
+
+.header {
+    width: 100%;
+    height: 65px; // background-color: #7070d4;
+    background-color: #b3b3bb;
+    h1 {
+        margin: 0;
+        padding-top: 12px;
+        font-size: 26px;
+    }
 }
 
 .App {
     text-align: center;
+    h1 {
+        color: #636363;
+        font-family: 'Oswald', sans-serif;
+    }
+    h2 {
+        font-size: 22px;
+        color: #b39999;
+        font-family: 'Oswald', sans-serif;
+    }
 }
 
 .flexContainer {
     // display: flex;
-   
     // margin: 0 auto;
 }
 
-.bitcoin, .etherum, .bitcoinCash, .litecoin {
+.bitcoin,
+.etherum,
+.bitcoinCash,
+.litecoin {
     width: 100%;
     height: 135px;
+}
+
+.bitcoin {
+    padding-top: 50px
 }
