--- a/src/App.css
+++ b/src/App.css
@@ -30,26 +30,26 @@ body {
   font-family: 'Oswald', sans-serif;
 }
 
+.App p {
+  padding-top: 28px;
+  color: white;
+}
+
 .bitcoin,
 .etherum,
 .bitcoinCash,
 .litecoin {
   width: 100%;
-  height: 135px;
-}
-
-.bitcoin {
-  padding-top: 50px;
+  height: 123px;
 }
 
 .checkButton {
   background-color: #ff7474;
   border: 0;
-  display: inline-block;
-  float: right;
+  display: block;
   color: white;
   margin-top: 27px;
-  margin-right: 8px;
+  margin-left: 12px;
   padding: 3px 5px 4px 5px;
   font-size: 13px;
 }
