--- a/src/app.scss
+++ b/src/app.scss
@@ -26,6 +26,11 @@ body {
         color: #b39999;
         font-family: 'Oswald', sans-serif;
     }
+    p {
+        // display: inline-block;
+        padding-top: 28px;
+        color: white;
+    }
 }
 
 .flexContainer {
@@ -38,21 +43,21 @@ body {
 .bitcoinCash,
 .litecoin {
     width: 100%;
-    height: 135px;
+    height: 123px;
 }
 
 .bitcoin {
-    padding-top: 50px
+    // padding-top: 50px
 }
 
 .checkButton {
     background-color: #ff7474;
     border: 0;
-    display: inline-block;
-    float: right;
+    display: block;
+    // float: right;
     color: white;
     margin-top: 27px;
-    margin-right: 8px;
+    margin-left: 12px;
     padding: 3px 5px 4px 5px;
     font-size: 13px;
     &:focus {
