--- a/src/App.css
+++ b/src/App.css
@@ -52,10 +52,16 @@ body {
   margin-left: 7%;
   padding: 5px 8px 6px 8px;
   font-size: 14px;
+  box-shadow: 1px 2px 2px 0px black;
+  cursor: pointer;
 }
 
 .checkButton:focus {
   outline: 0;
+}
+
+.checkButton:hover {
+  opacity: .7;
 }
 
 @media screen and (min-width: 475px) {
