--- a/src/app.scss
+++ b/src/app.scss
@@ -59,8 +59,13 @@ body {
     margin-left: 7%;
     padding: 5px 8px 6px 8px;
     font-size: 14px;
+    box-shadow: 1px 2px 2px 0px black;
+    cursor: pointer;
     &:focus {
         outline: 0;
+    }
+    &:hover {
+        opacity: .7;
     }
 }
 
