--- a/src/app.scss
+++ b/src/app.scss
@@ -121,7 +121,7 @@ body {
         }
     }
     .maxWidthContainer {
-        margin-top: 15%;
+        // margin-top: 15%;
     }
     .checkButton {
         font-size: 28px;
