more final touches

--- a/src/app.scss
+++ b/src/app.scss
@@ -88,7 +88,7 @@ body {
         padding-bottom: 64px;
     }
     .etherum {
-        margin-top: 16%;
+        margin-top: 12%;
     }
     .App h2 {
         font-size: 35px;
@@ -133,6 +133,9 @@ body {
             padding-top: 12px;
             font-size: 55px;
         }
+    }
+    .etherum {
+        margin-top: 25px;
     }
 }
 
