--- a/src/App.css
+++ b/src/App.css
@@ -83,7 +83,7 @@ body {
     padding-bottom: 64px;
   }
   .etherum {
-    margin-top: 16%;
+    margin-top: 12%;
   }
   .App h2 {
     font-size: 35px;
@@ -123,6 +123,9 @@ body {
   .header h1 {
     padding-top: 12px;
     font-size: 55px;
+  }
+  .etherum {
+    margin-top: 25px;
   }
 }
 
